# openrelik-workers

./: README.md
.github/: repos-poetry.yaml  repos-uv.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_report.yaml
.github/workflows/: docker-image-build-log2timeline-staging.yaml  docker-image-build-release.yaml  docker-image-build.yaml  python-test-poetry.yaml  python-test-uv.yaml  update-uv-and-run-tests.yaml
workers/openrelik-worker-analyzer-logs/: pyproject.toml
workers/openrelik-worker-analyzer-logs/src/: app.py  ssh_analyzer.py
workers/openrelik-worker-analyzer-logs/tests/: test_ssh_analyzer.py  test_tasks.py
workers/openrelik-worker-bulkextractor/: Dockerfile  README.md  pyproject.toml
workers/openrelik-worker-capa/: Dockerfile  README.md  pyproject.toml
workers/openrelik-worker-capa/tests/: test_tasks.py
workers/openrelik-worker-chromecreds/: Dockerfile  README.md  pyproject.toml
workers/openrelik-worker-cloud-logs/: Dockerfile  README.md  pyproject.toml
workers/openrelik-worker-cloud-logs/src/: app.py  gcp.py
workers/openrelik-worker-entropy/: Dockerfile  README.md  pyproject.toml
workers/openrelik-worker-exif/: Dockerfile  README.md  pyproject.toml
workers/openrelik-worker-extraction/tests/: test_archives.py  test_image_export.py  test_utils.py
workers/openrelik-worker-floss/: README.md
workers/openrelik-worker-grep/: Dockerfile  README.md  pyproject.toml
workers/openrelik-worker-llm/: Dockerfile  README.md  openrelik.yaml  pyproject.toml
workers/openrelik-worker-llm/tests/: test_tasks.py
workers/openrelik-worker-os-creds/: Dockerfile  README.md  pyproject.toml
workers/openrelik-worker-os-creds/src/: app.py
workers/openrelik-worker-os-creds/src/analyzers/: windows_analyzer.py
workers/openrelik-worker-photorec/: Dockerfile  README.md  pyproject.toml
workers/openrelik-worker-strings/tests/: test_tasks.py
workers/openrelik-worker-timesketch/: Dockerfile  README.md  pyproject.toml
workers/openrelik-worker-yara/: Dockerfile  README.md
workers/openrelik-worker-yara/src/: app.py  tasks.py
workers/openrelik-worker-yara/test_data/: fraken_out.jsonl  rule1.yara  rule2.yara  test_input.txt
workers/openrelik-worker-yara/tests/: test_tasks.py
