[project]
name = "openrelik-worker-bulkextractor"
version = "2025.01.21"
description = "Run bulk extractor on a set of files"
authors = [{ name = "axpatito" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "celery[redis]>=5.4.0,<6",
    "openrelik-worker-common>=0.17.1",
    "debugpy>=1.8.7,<2",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov>=5.0.0,<6",
]

[tool.uv]
package = false
default-groups = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"