[project]
name = "openrelik-worker-capa"
version = "0.2.4"
description = "Identify capabilities in executable files"
authors = [{ name = "Johan Berggren", email = "jberggren@gmail.com" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
dependencies = [
    "celery[redis]>=5.4.0,<6",
    "openrelik-worker-common>=0.17.1",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov>=5.0.0,<6",
    "pytest-mock>=3.14.0,<4",
]

[tool.uv]
package = false
default-groups = ["test"]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
