[project]
name = "openrelik-worker-chromecreds"
version = "0.1.0"
description = "Extracts and analyses stored Chrome credentials"
authors = [{ name = "Fry", email = "fryx0r@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "celery[redis]>=5.4.0,<6",
    "openrelik-worker-common>=0.17.1",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[tool.uv]
package = false
default-groups = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
