[project]
name = "openrelik-worker-entropy"
version = "0.1.0"
description = "Calculate entropy of files"
authors = [{ name = "Ramses de Beer", email = "ramsesdebeer@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "celery[redis]>=5.4.0,<6",
    "openrelik-worker-common>=0.17.1",
    "debugpy>=1.8.7,<2",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov>=5.0.0,<6",
    "pytest-mock>=3.14.0",
]

[tool.uv]
package = false
default-groups = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
