[project]
name = "openrelik-worker-exif"
version = "0.1.0"
description = "This worker should extract exif information from files"
authors = [{ name = "Alexander Jaeger", email = "mail@alexanderjaeger.de" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "celery[redis]>=5.4.0,<6",
    "openrelik-worker-common>=0.17.0",
    "debugpy>=1.8.7,<2",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov>=5.0.0,<6",
    "pytest-mock>=3.14.0,<4",
    "Pillow>=12.1.1",
    "piexif>=1.1.3",
]

[tool.uv]
package = false
default-groups = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
