[project]
name = "openrelik-worker-llm"
version = "0.1.0"
description = "OpenRelik LLM Worker"
authors = [{ name = "Benjamin Koffel", email = "benjaminkoffel@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "celery[redis]>=5.3.6,<6",
    "openrelik-worker-common>=0.17.0",
    "openrelik-ai-common>=0.5.0",
    "debugpy>=1.8.7,<2",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov>=5.0.0,<6",
    "pytest-mock>=3.14.0,<4",
]

[tool.uv]
package = false
default-groups = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
