[project]
name = "openrelik-worker-os-creds"
version = "0.1.0"
description = "Extract and bruteforce OS credentials"
authors = [{ name = "Fry", email = "fryx0r@gmail.com" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
dependencies = [
    "celery[redis]>=5.4.0,<6",
    "openrelik-common>=0.7.0,<1.0.0",
    "openrelik-worker-common>=0.17.1,<1.0.0",
    "impacket>=0.12.0",
    "setuptools>=80.10.2",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov>=5.0.0,<6",
    "pytest-mock>=3.14.0,<4",
    "impacket>=0.12.0",
    "setuptools>=80.10.2",
]

[tool.uv]
package = false
default-groups = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
